--- a/Form/war/gwt.css
+++ b/Form/war/gwt.css
@@ -6,6 +6,10 @@ h1 {
     text-align: center;
 }
 
+body {
+    background-color: #EFF3F6;
+}
+
 body, td, a, div, .p {
     font-family: arial, sans-serif
 }
@@ -15,30 +19,41 @@ body, td, a, div, .p {
     font-style: normal;
     font-family: 'Arial Regular';
     font-weight: 400;
-    border: 1px solid lightgray;
-    background: #fff;
     line-height: normal;
     position: absolute;
     left: 40%;
     top: 20%;
-    width: 260px;
-    height: 260px;
     margin: 0 auto;
+}
+
+.title {
+    color: #354052;
+    font-size: 24px;
+    padding-bottom: 10px;
+}
+
+#formPanel {
+    border: 1px solid lightgray;
     border-radius: 15px;
     padding-top: 10px;
     padding-left: 10px;
+    width: 260px;
+    height: 260px;
+    background: #ffffff;
 }
 
 #name {
     background: url(images/newwindow.gif) no-repeat scroll 7px 7px;
     padding-left: 30px;
     height: 30px;
+    border: 3px solid #E6E6E6;
+    border-radius: 5px;
 }
 
 select {
     background: url(images/u38.png) no-repeat scroll 7px 12px;
     border: 3px solid #E6E6E6;
-    border-radius: 0;
+    border-radius: 5px;
     font-weight: 400;
     color: inherit;
     padding: 11px 35px;
@@ -53,7 +68,11 @@ option:first-child {
     display: none;
 }
 
-.gwt-Button {
+#formPanel .selectionError {
+    border-color: red;
+}
+
+#formPanel button {
     background: url(images/u30.png);
     border: none;
     height: 35px;
@@ -65,10 +84,9 @@ option:first-child {
 }
 
 .error {
-    position: relative;
-    margin-bottom: 10px;
+    margin-top: 20px;
     left: 40%;
-    top: 391px;
+    top: 500px;
     z-index: 10003;
     width: 260px;
     height: 35px;
@@ -77,4 +95,8 @@ option:first-child {
     text-align: center;
     line-height: 30px;
     border-radius: 5px;
+}
+
+.hidden {
+    display: none;
 }
